add: nacrtobrokov.html, obrok,js, backend logic

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,8 +20,8 @@
             <nav>
                 <ul id="MenuItems">
                     <li><a href="index.html">Domov</a></li>
-                    <li><a href="">O nas</a></li>
                     <li><a href="recepti.html">Recepti</a></li>
+                    <li><a href="nacrtobrokov.html">Načrt obrokov</a></li>
                     <!--
                     <li><a href="account.html">Account</a></li>
                     <li><a href="settings-color.html">Settings</a></li>
@@ -109,7 +109,7 @@
                 <h1>Testenine carbonara</h1>
                 <small>Pristna italijanska carbonara z bogatim okusom slanine, jajc in sira. <br> Hitro pripravljena jed, ki vas bo popeljala v srce Rima.</small>
                 <div>
-                <a href="product-details4.html" class="btn">Pogled</a>
+                <a href="" class="btn">Pogled</a>
                 </div>
             </div>
         </div>
@@ -117,53 +117,7 @@
 </div>
 
 
-<!---Testimonial-->
-<div class="testimonial">
-    <!--<div class="small-container">
-        <div class="row">
-            <div class="col-4">
-                <i class="fa fa-quote-left"></i>
-                <p>I've been a loyal customer of this tennis shop for years, and I can confidently say that their selection is unbeatable. From top-notch rackets to stylish apparel, they always have everything I need to elevate my game.</p>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-o"></i>
-                </div>
-                <img src="sliki/person2.jpg">
-                <h3>Marco Rossi</h3>
-            </div>
-            <div class="col-4">
-                <i class="fa fa-quote-left"></i>
-                <p>The customer service at this tennis shop is outstanding. The staff are knowledgeable, friendly, and always willing to go the extra mile to ensure I find the perfect gear for my needs. It's my go-to spot for all things tennis.</p>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-half-o"></i>
-                </div>
-                <img src="sliki/person3.jpg">
-                <h3>Jovana Müller</h3>
-            </div>
-            <div class="col-4">
-                <i class="fa fa-quote-left"></i>
-                <p>I recently discovered this tennis shop, and I'm impressed by the quality of their products. Not only do they carry leading brands, but their prices are also competitive. It's quickly become my favorite place to shop for tennis equipment.</p>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                </div>
-                <img src="sliki/person4.jpg">
-                <h3>Henrik Jensen</h3>
-            </div>
-        </div>
-    </div>
-    -->
-</div>
+
 
 <!--tennis brands-->
 <div class="brands">
