--- a/frontend/recepti.html
+++ b/frontend/recepti.html
@@ -20,8 +20,8 @@
             <nav>
                 <ul id="MenuItems">
                     <li><a href="index.html">Domov</a></li>
-                    <li><a href="">O nas</a></li>
                     <li><a href="recepti.html">Recepti</a></li>
+                    <li><a href="nacrtobrokov.html">Načrt obrokov</a></li>
                     <a href="#" id="openModalBtn" style="display: inline-block; background: #41b816; color: #ffffffc1; padding: 8px 30px; margin: 30px 0; border-radius: 30px; transition: background 0.5s;" class="btn">Dodaj Recept</a></li>
                    <li><input type="text" id="searchBar" placeholder="Išči recept">
                     <button type="button" id="searchButton">
