add: added cards to display meal prep, modified style

--- a/frontend/nacrtobrokov.html
+++ b/frontend/nacrtobrokov.html
@@ -42,9 +42,18 @@
     <div class="meal-table">
         <!-- Meal Table Header -->
         <div class="meal-header">
-            <div>Zajtrk</div>
-            <div>Kosilo</div>
-            <div>Večerja</div>
+            <div>
+                Zajtrk
+                <img src="sliki/breakfast.png" alt="" style="width: 30px; height: 30px; vertical-align: middle;"/>
+            </div>
+            <div>
+                Kosilo
+                <img src="sliki/meal.png" alt="" style="width: 30px; height: 30px; vertical-align: middle;"/>
+            </div>
+            <div>
+                Večerja
+                <img src="sliki/vecera.png" alt="" style="width: 30px; height: 30px; vertical-align: middle;"/>
+            </div>
         </div>
         
         <!-- Meal Table Content -->
@@ -60,6 +69,14 @@
 </form>
 </div>
 
+<div id="meal-plans-list">
+    <h1>
+        Obstoječi načrte obrokov
+        <img src="sliki/nacrt.png" alt="Description of image" style="width: 70px; height: 70px; vertical-align: middle;"/>
+      </h1>
+    <div id="meal-plan-cards" class="meal-content">
+    </div>
+</div>
 <script src="obrok.js"></script>
 </body>
 </html>
