update: updated filtered functionality by type

--- a/frontend/recepti.html
+++ b/frontend/recepti.html
@@ -65,7 +65,7 @@
 
 <!-- Modal for adding new recipes -->
 <div id="recipeModal" class="modal">
-    <div class="modal-content">
+    <div class="modal-contentt">
         <span class="close">&times;</span>
         <h2>Dodaj Recept</h2>
         <form id="recipeForm" enctype="multipart/form-data">
@@ -98,7 +98,7 @@
             </div>
             <input type="hidden" id="hiddenIngredients" name="sestavine">
             
-            <label for="osebe">Stevilo oseb:</label>
+            <label for="osebe">Stevilo porcij:</label>
     <input type="number" id="osebe" name="osebe" required />
         
             <label for="description">Opis:</label>
