--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,16 +22,8 @@
                     <li><a href="index.html">Domov</a></li>
                     <li><a href="recepti.html">Recepti</a></li>
                     <li><a href="nacrtobrokov.html">Načrt obrokov</a></li>
-                    <!--
-                    <li><a href="account.html">Account</a></li>
-                    <li><a href="settings-color.html">Settings</a></li>
-                    <li class="cart">
-                        <a href="kosarica.html">
-                            <ion-icon name="basket"></ion-icon>Cart
-                        </a>
-                        <span>0</span>
-                    </li>
-                    --->
+                    <li><a href="prehranskePotrebe.html">Moje prehranske potrebe</a></li>
+                   
                 </ul>
             </nav>
 
